[project]
name = "hxzzz_3"
version = "0.1.0"
description = "hxzzz_3"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_capoo", "nonebot_plugin_longtu", "nonebot_plugin_gpt3"]
plugin_dirs = ["hxzzz_3/plugins"]
builtin_plugins = ["echo"]
